add tests
Signed-off-by: Peter Mitri <peter.mitri@rte-france.com>